--- a/deno.json
+++ b/deno.json
@@ -11,7 +11,8 @@
 		"@std/path": "jsr:@std/path@^1.0.6",
 		"@types/express": "npm:@types/express@^4.17.15",
 		"cors": "npm:cors@^2.8.5",
-		"express": "npm:express@^4.18.2"
+		"express": "npm:express@^4.18.2",
+		"public-ip": "npm:public-ip@^7.0.1"
 	},
 	"lint": {
 		"include": ["src/"],
