changed build to dynamic docker group gid

--- a/deno.json
+++ b/deno.json
@@ -3,6 +3,7 @@
 		"dev": "deno run --allow-env --allow-read --allow-write --allow-run --allow-net src/main.ts",
 		"prod": "deno run --allow-env --allow-read --allow-write --allow-run --allow-net src/main.ts",
 		"docker": "docker build -t arsa-backend .",
+		"docker-hetzner": "docker build -t arsa-backend --build-arg DOCKER_GID=988 .",
 		"docker-ars": "docker build -t ars ./ars",
 		"docker-run": "docker run -d --rm -p 3000:3000 --name arsa-backend arsa-backend",
 		"lint": "deno lint",
