--- a/deno.json
+++ b/deno.json
@@ -14,6 +14,7 @@
 		"@std/dotenv": "jsr:@std/dotenv@^0.225.2",
 		"@std/fs": "jsr:@std/fs@^1.0.4",
 		"@std/path": "jsr:@std/path@^1.0.6",
+		"@std/uuid": "jsr:@std/uuid@^1.0.4",
 		"hono": "jsr:@hono/hono@^4.6.4",
 		"public-ip": "npm:public-ip@^7.0.1"
 	},
