--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,9 @@ jobs:
               id: push
               uses: docker/build-push-action@v6
               with:
+                  build-args: |
+                    DOCKER_GID=102
+                    DOCKER_PORT=80
                   context: .
                   push: true
                   tags: ${{ steps.meta.outputs.tags }}
