added env variables for docker network and volumes

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,7 @@
 ENVIRONMENT="Development"
 PORT="3000"
+NETWORK="default"
+MOUNT_TYPE_PROFILES="bind"
+MOUNT_TYPE_SERVERS="bind"
+SOURCE_PROFILES="/etc/arsa/arsa-profiles"
+SOURCE_SERVERS="/etc/arsa/arsa-servers"
