--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,7 @@
 ENVIRONMENT="Production"
 PORT="80"
+NETWORK="host"
+MOUNT_TYPE_PROFILES="bind"
+MOUNT_TYPE_SERVERS="volume"
+SOURCE_PROFILES="/etc/arsa/arsa-profiles"
+SOURCE_SERVERS="arsa-servers"
