--- a/deno.json
+++ b/deno.json
@@ -11,12 +11,12 @@
 		"fmt": "deno fmt"
 	},
 	"imports": {
-		"@std/assert": "jsr:@std/assert@1",
-		"@std/dotenv": "jsr:@std/dotenv@^0.225.2",
-		"@std/fs": "jsr:@std/fs@^1.0.4",
-		"@std/path": "jsr:@std/path@^1.0.6",
+		"@std/assert": "jsr:@std/assert@^1.0.11",
+		"@std/dotenv": "jsr:@std/dotenv@^0.225.3",
+		"@std/fs": "jsr:@std/fs@^1.0.10",
+		"@std/path": "jsr:@std/path@^1.0.8",
 		"@std/uuid": "jsr:@std/uuid@^1.0.4",
-		"hono": "jsr:@hono/hono@^4.6.4",
+		"hono": "jsr:@hono/hono@^4.6.19",
 		"public-ip": "npm:public-ip@^7.0.1"
 	},
 	"compilerOptions": {
